--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -1119,7 +1119,7 @@ The whole process goes like this:
 
 ```diff
 - (Is the only purpose of the protocol is to create ecryption keys to symetrically encrypt the connection?)
-- (Stratesd checking this protocol but you wrote W-A-Y too much information summories it )
+- (Stratesd checking this protocol but you wrote W-A-Y too much information summaries it)
 ```
 
 ###### [Back to top](#bigous-protocolous)
@@ -1372,6 +1372,10 @@ This protocol rides ontop of the `SSH Transport Layer Protocol`. The protocol is
 > Remote port forwarding is used when direct communication to the server is impossible, for example when there is a firewall. The `SSH client` on the client machine will `encrypt the data` and the `ssh server` on the server machine will `decrypt the data` before forwaring it to the server application.
 
 
+```diff
+- (Stratesd checking this protocol but you wrote too much information summaries it)
+```
+
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
@@ -1504,6 +1508,10 @@ After finishing the handshake the client and server will communicate graphical d
 
 Obviously this is not the exact structure of an RDP packet, since the entire packet can not be encrypted for sake for transmission. But it does ilustrate the structure of "How does the protocol encapsulate it's information".
 
+```diff
+- (Is the authentication done by the RDP protocole itself?)
+```
+
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
@@ -1512,7 +1520,7 @@ Obviously this is not the exact structure of an RDP packet, since the entire pac
 ## Microsoft SQL Server Tubular Data Stream A.K.A MS-SSTDS
 ###### *[#Layer-7] [#TCP/1433]*
 
-The ms-sstds (also known as mssql, and will be refered to as fro now on) protocol is a protocol that allows authentication, query and other operations on a microsoft sql server.
+The ms-sstds (also known as mssql, and will be refered to as from now on) protocol is a protocol that allows authentication, query and other operations on a microsoft sql server.
 
 ### WHY WAS IT INVENTED?
 
@@ -1531,7 +1539,7 @@ Let's go into details:
 > Before performing operations or sending sql statements to be executed the client must authenticate itself to the server.
 > Before "logging in", the client will send a `PRELOGIN` message. This message will contain some context for the session, and also may be used to wrap the TLS handshake payload. Then the server will return a `PRELOGIN response`.
 >
-> Afterwards the client must send a `LOGIN` message in order to authenticate, this message will contain the username and password of the user. The server will return a `LOGIN response`, that messagewill contain information about the server if the login is successful.
+> Afterwards the client must send a `LOGIN` message in order to authenticate, this message will contain the username and password of the user. The server will return a `LOGIN response`, that message will contain information about the server if the login is successful.
 
 > #### `Client` `SQL Batch`
 >
@@ -1539,11 +1547,19 @@ Let's go into details:
 
 > #### `Server` `Row Data`
 >
-> The server will answer `SQL Batch` messages that return data with the data that was requested stored in rows.
+> The server will answer `SQL Batch` messages that return the data that was requested stored in rows.
+
+```diff
+- (It will return the data in rows or is it stored in rows?)
+```
 
 > #### `Client` `Remote Procedure Call (RPC)`
 >
 > If the client wishes to perform an rpc call on the sever then it can send an isolated rpc call packet.
+
+```diff
+- (What do you use this feature for?)
+```
 
 > #### `Server` `Remote Procedure Call (RPC) Response`
 >
@@ -1601,6 +1617,10 @@ Overall, the flow of a connection may look something like this:
 
 ## Lighweight Directory Access Protocol A.K.A LDAP
 
+```diff
+- (Port an layer?)
+```
+
 The LDAP protocol is used to enumerate and perform actions on the AD structure of a domain, with this protocol a client can communicate with the DC and gather information about the domain's structure.
 
 ### WHY WAS IT INVENTED?
@@ -1639,6 +1659,10 @@ These messages all follow the same format each with their own MessageID.
 >
 > This operation lets a client add an object to the Active Directory structure, a client must spcify the full path of the object as the name and it's attributes.
 
+```diff
+- (Is LDAP exculsive for Active Directory?)
+```
+
 > **Delete**
 >
 > This operation lets a client delete an object from the Active Directory by specifying it's full path.
@@ -1672,6 +1696,10 @@ These messages all follow the same format each with their own MessageID.
 
 Modbus is a data communication protocol. Modbus provides a common language for devices and equipment to communicate with one another, those devices are usually `PLC` (Programmable Logic Controller) or `SCADA` (Supervisory Control And Data Acquisition) devices. To save any confusion, Modbus is a standalone protocol that does not belong to the TCP/IP or OSI model. However, there is a Modbus version for Ethernet.
 
+```diff
+- (In the Ethernet version What port an layer dos it use?)
+```
+
 ### WHY WAS IT INVENTED?
 
 Modbus was invented by Modicon in 1979 to be used by it's PLCs. Modbus allows devices with different interfaces to communicate over a **common language**. Today it is a widely used protocol in the industry since it is open source and free to use, that way any engineer can simply pick it up and use it in their own equipment.
@@ -1693,6 +1721,10 @@ Let's break it down.
 > #### `Server Address`
 >
 > A modbus network is made up of up to 248 machines, 1 client and up to 247 servers. Each server in the network has it's own address, so the first byte in the message will be the server's address. When a server receives a message it will read the first byte and will be able to understand whether to drop the packet or not.
+
+```diff
+- (You said earlier that the server is the one that sends the information...)
+```
 
 > #### `Opcode`
 >
@@ -1729,6 +1761,9 @@ Let's break it down.
 
 Using these formats in the messages the client and servers can communicate reliably and efficiently.
 
+```diff
+- (Are there any limitations or disadvantages using MODBUS?)
+```
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
