Update 09. IP Fragmentation.md

--- a/09. IP Fragmentation.md
+++ b/09. IP Fragmentation.md
@@ -6,7 +6,7 @@ IP Fragmentation is the process of breaking down and Internet Protocol packet to
 
 > #### Fragmentation
 >
-> First, if the `Don't fragment` flag is on in the IP header the pacet will not be fragmented. Else, N new ip packets are created.  Then the IP header is duplicated from the original packet to the new smaller packets and the data is devided into those packets equally in bytes. The IP header also undergoes some changes:
+> First, if the `Don't fragment` flag is on in the IP header the pacלet will not be fragmented. Else, N new ip packets are created.  Then the IP header is duplicated from the original packet to the new smaller packets and the data is devided into those packets equally in bytes. The IP header also undergoes some changes:
 > * `more-fragments` flag is turned on for all of the packets, for the last fragments it is set to the value from the header of the original packet.
 > * `Identification` the packets are given an identification number to state that they belong to the same original packet.
 > * `fragment offset` the fragment offset is set to 0 on the *first fragment*, and the rest are set to amount of data offset in 8 byte blocks (offset of 400 bytes / 8 bytes = 50).
@@ -14,7 +14,7 @@ IP Fragmentation is the process of breaking down and Internet Protocol packet to
 
 > #### Reassembly
 >
-> The way the packet is reconstituted is first by finding the fragments that belong to it. There are 4 things that need to match in order to tie it to the same packet: Destination IP, Source IP, Protocol & Identification number. When discovering a new packet a buffer is created for it, then the arriving packets are put inside. The buffer is a list of "hole"s, a hole is a continous region inside the buffer whose bytes are bank and not yet occupied by a fragment.
+> The way the packet is reconstituted is first by finding the fragments that belong to it. There are 4 things that need to match in order to tie it to the same packet: Destination IP, Source IP, Protocol & Identification number. When discovering a new packet a buffer is created for it, then the arriving packets are put inside. The buffer is a list of "hole"s, a hole is a continous region inside the buffer whose bytes are blank and not yet occupied by a fragment.
 >
 > The hole object has a hole.first and a hole.last property, both containing the first and last byte of the hole. At first the entire buffer is one big hole (hole.last will be a really large number).
 >
@@ -27,3 +27,7 @@ Packet fragmentation can be exploited and that is due to the fact that packet fr
 > #### UDP & ICMP Fragantation attacks
 >
 > These attacks are using protocol that are stateless, create "bad" packets, fragment them and send them over to the victim. The fragments cannot be reassembled on the victim machine since they are not valid and thus when sent in a volume, ovewhelm the target machine and deplete their resource.
+
+```diff 
+- (There are more ways to exploit this mechanisem,write about them)
+```
