--- a/10. ICMP.md
+++ b/10. ICMP.md
@@ -64,6 +64,11 @@ An ICMP redirection attack takes advantage of the ICMP redirect message, and an 
 
 The Attacker is the Kali machine (192.168.100.5), My victim is the 'Win10 - 01' machine (192.168.100.1) and the machine I am going to gateway to is the DC (192.168.50.1). Now, let's craft ourself a redirect packet.
 
+```diff
+- (The IP 192.168.100.5 does not exist in your map)
+- (I cant understand what this sentence means)
+```
+
 *click click*... *keyboard noises*... *Head slaminh against desk*... *more keyboard noises*...
 
 Anddddd there we go!
