--- a/11. ARP.md
+++ b/11. ARP.md
@@ -4,7 +4,7 @@ ARP is a layer 2 Protocl that bridges between the layer 2 (Ethernet) and layer 3
 
 To route packets through a network, both an IP address and a MAC address are needed, an IP address of the final destination of the packet and the MAC address of the next hop in the route to that final destination dictated by the IP address. When one of these factors are unknown ARp is used to solve for it.
 
-The way it works is by sending a request to the entire network in a broadcast asking who the holder of the IP/MAC address is, so that they can provide the missing address. To further understand let's imagine a scenario:
+The way it works is by sending a request to the entire network in a broadcast asking who is the holder of the IP/MAC address is, so that they can provide the missing address. To further understand let's imagine a scenario:
 
 > An endpoint doesn't know the MAC address of their default gateway to route the message to the internet. That endpoint will send an ARP request to the LAN asking for the MAC of the default gateway.
 
@@ -47,7 +47,7 @@ There is another use case for the gratutious ARP reply, and that is when **two m
 
 # Vulnerability
 
-There is a problem with this system however, ARP responses may be accepted by machines without them ever sending a request. And that may lead to a malicious change in the victim's ARP table. One that let's the attacker become a middlemen! An attacker can then diguise themselves as another machine, and actch all the network directed to that machine. Once they have that network they can alter it, block it or simply just read it.
+There is a problem with this system however, ARP responses may be accepted by machines without them ever sending a request. And that may lead to a malicious change in the victim's ARP table. One that let's the attacker become a middlemen! An attacker can then diguise themselves as another machine, and actch all the network traffic directed to that machine. Once they have that network traffic they can alter it, block it or simply just read it.
 
 How I did it, a very simple script. If you want to palce yourself as a middle man in-between two machine's first you have to be on the first Lan. But that's a given, so next you have to make them both think that the other machine is you. And I accomplished that with this simple python script using scapy:
 
@@ -101,3 +101,7 @@ The above script sends a packet to each of the machines posing as the other mach
 ![Machine1, IP: 192.168.100.1](/Pictures/ARP_Poisoning/Victim_1_Poisoned_ARP_Table.PNG)
 
 ![Machine2, IP: 192.168.100.2](/Pictures/ARP_Poisoning/Victim_2_Poisoned_ARP_Table.PNG)
+
+```diif
++ (No more fixes needed here)
+```
