--- a/12. TCP.md
+++ b/12. TCP.md
@@ -165,3 +165,7 @@ A connection can be ended by either of the peers, and that will simply made by u
 . 4          | --------------------------------------------> | CLOSED
 .            '                                               '
 ```
+
+```diff
+- (This explanation is unnecessarily long)
+```
