--- a/12. TCP.md
+++ b/12. TCP.md
@@ -168,4 +168,5 @@ A connection can be ended by either of the peers, and that will simply made by u
 
 ```diff
 - (This explanation is unnecessarily long)
+- (Where is the shijack code?)
 ```
