--- a/15. Firewalls.md
+++ b/15. Firewalls.md
@@ -12,6 +12,10 @@ Firewalls will usualy be the main "router" of the network since you want to be a
 
 The difference is in the simplicity, they both achieve the same goal. Stateful firewalls require more resources to analyze a data streams and accept it, it doesn't work based on strict rules and predetermined outcomes while stateless FWs do. Also, due to the higher consumption of resources by a single data stream of stateful fireworks, they are more susceptible to DDOS attacks.
 
+```diff
+- (Stateful firewall have capabilities that stateless does not have and you have to make the rules more loose if you have a stateless firewall can you explain why?)
+```
+
 # Pros and Cons of a Firewall
 
 It is undeniabe that having a firewall nowadays is crucial, but what are the cons of that? Obviously the firewall allows the contorl of traffic inside and to the network, blocking communication using specific IPs/protocols/ports and even analyzing the communication in the network to prevent cyber attacks.
@@ -23,3 +27,7 @@ First. **Cost**, firewalls come in both hardware and software versions where the
 **Comfortability**, depending on the strictness of the FW rules, the user can become restricted from performing ertein tasks. A thing that can damage a company's productivity.
 
 **Complexity**, firewalls used in massive networks often require teams of professionals to operate the complexity of such firewalls.
+
+```diff
+- (The intention was for you to write pros and cons about the firewall types)
+```
