--- a/15. Firewalls.md
+++ b/15. Firewalls.md
@@ -30,4 +30,5 @@ First. **Cost**, firewalls come in both hardware and software versions where the
 
 ```diff
 - (The intention was for you to write pros and cons about the firewall types)
+- (About the firewall rules I want to see a picture of the rules after the changes, and I can tell you from what I have read that there are more changes need to be made)
 ```
