--- a/16. IDS IPS.md
+++ b/16. IDS IPS.md
@@ -1,5 +1,9 @@
 # IDS - Intruder Detection System
 
+```diff
+- (Intrusion Detection Systems)
+```
+
 An intruder Detection System is a network component that looks into network traffic and, based on certein methods, alerts when it detects malicious traffic.
 
 An intruder detection system will usually be applied on a central network device like the firewall since you want to filter as much data as possible, but any device that can supports it can be an IDS.
@@ -9,6 +13,10 @@ An intruder detection system will usually be applied on a central network device
 Host based IDS is a little different since it does not analyze networ traffic but application and computer logs to detect malicious activity. 
 
 ## IPS - Intruder Prevention System
+
+```diff
+- (Intrusion Prevention  Systems)
+```
 
 If an IDS is given the abilty to stop communication that it detects as malicious, it becomes an IPS. IPS' may sometimes get their analyses wrong and block communication on a *false positive*. However when it block malicious traffic as intended it is called a *true positive*.
 
