Update 16. IDS IPS.md

--- a/16. IDS IPS.md
+++ b/16. IDS IPS.md
@@ -8,6 +8,10 @@ An intruder Detection System is a network component that looks into network traf
 
 An intruder detection system will usually be applied on a central network device like the firewall since you want to filter as much data as possible, but any device that can supports it can be an IDS.
 
+```diff
+- (Is it a must to put it in a central location?)
+```
+
 #### Host and Network Based
 
 Host based IDS is a little different since it does not analyze networ traffic but application and computer logs to detect malicious activity. 
@@ -27,3 +31,8 @@ Detections of "intrusions" can be done in different methods, one of them is sign
 > In the signing method, the packet is digested by some hashing algorithm that outputs a `signature`. This signature is them compared to a database containing hundreds or thousands of signatures of malicious packets.
 
 > Another method for detection is detecting anomalous se of certein protocols and how they deviate from the normal use case of those prtocols.
+
+```diff
+- (Write a bit more there is not enough information here)
+- (Where is the snort rule explantion?)
+```
