Update 17. Promiscuous Mode.md

--- a/17. Promiscuous Mode.md
+++ b/17. Promiscuous Mode.md
@@ -6,3 +6,7 @@ Promiscuous mode isn't some alien technology that let's you sniff all packets go
 
 1. Switch, the switch forwards packets to the destination machines. Meaning that the promiscuous sniffer will only get packets destined to him anyways, and not anyone else's.
 2. If the Promicuous sniffer decides to perform some attack to bypass the switch (arp spoofing, ip spoofing, icmp redirection) we can try to fight those with the switch configurations as well. We may decide to limit a switch port to only 1 MAC address if we know it isn't going to be used by another switch, that way the attacker wont be able to perform arp spoofing very well.
+
+```diff
+- (1 and 2 are basically the same)
+```
