Update 18. Network address translation.md

--- a/18. Network address translation.md
+++ b/18. Network address translation.md
@@ -14,7 +14,7 @@ Instead, You can register only one IP address for your gateway to the internet, 
 
 ## How does it do that?
 
-The main goal is to translate an private IP address to a public IP address. Introducing the NAT table, it is a table to keep track of translations between private and public IP addresses, so when a packet with a private IP address gets to the router it will know what public address to use. And more importantly when a packet with the public ip arrives at the router it will know what machine to route it to.
+The main goal is to translate a private IP address to a public IP address. Introducing the NAT table, it is a table to keep track of translations between private and public IP addresses, so when a packet with a private IP address gets to the router it will know what public address to use. And more importantly when a packet with the public ip arrives at the router it will know what machine to route it to.
 
 There are multiple ways to translate addresses:
 
@@ -25,7 +25,7 @@ There are multiple ways to translate addresses:
 
 > **Dynamic NAT**
 >
-> In this translation, the router will have a pool of ore than one public addresses (which have to be bought). Afterwards, the router will translate one private IP address to one public IP address until all IP addresses in the pool are used. When there are no IPs left to use the local machines will have to wait for an address to become free.
+> In this translation, the router will have a pool of more than one public addresses (which have to be bought). Afterwards, the router will translate one private IP address to one public IP address until all IP addresses in the pool are used. When there are no IPs left to use the local machines will have to wait for an address to become free.
 
 > **Static NAT**
 >
@@ -40,8 +40,16 @@ There are multiple ways to translate addresses:
 > | 10.0.1.1                    | 192.168.142.22                |
 > | 10.0.1.25:80                | 192.168.142.22:80             |
 
+```diff
+- (When would you use each one of the methode of NAT?)
+```
+
 ## Encouters with NAT in the wild
 
 As attackers we will sometimes wants to perform some actions on a network from the outside, maybe because we still have not gained access to it. In that case we will have to use it's public IP/IPs in order to interact with it, so what do we do? Since those addresses don't necessarily map to a single machine we wil perform a port scan on that address. See what possible attack vectors that address allows.
 
 From then we will act upon the findings or perform some more recon based on them.
+
+```diff
+- (How will the port scan help?)
+```
