Update 18. Network address translation.md

--- a/18. Network address translation.md
+++ b/18. Network address translation.md
@@ -51,5 +51,5 @@ As attackers we will sometimes wants to perform some actions on a network from t
 From then we will act upon the findings or perform some more recon based on them.
 
 ```diff
-- (How will the port scan help?)
+- (How will the port scan help? Try again)
 ```
