Update 20. Final Mission - Medium Network.md

--- a/20. Final Mission - Medium Network.md
+++ b/20. Final Mission - Medium Network.md
@@ -51,3 +51,9 @@ Okay let's get into it, obvously there are a few fuck up in this network. Some a
 2. **Segmentation**
     
     Overall the segmentation in this network is good, The segments each play a different role. SCADA has their own FW, Servers are in the own segment and Administrators have their own segment. Each with their own private IP, only the DMZ using public IPs. But there is a single problem, The domain's database is located in the user's segment. Assuming one of the user's CP falls under an attack it will not be hard to get a hold of the DB.
+    
+    
+```diff
+- (There are things missing from the network such as SIEM an IDS/IPS...)
+- (Therre is more to the network in terms of secure and not secure, one example is the DC should be in its own segment please sit and look at it again and make two colums for secure and not secure and fill them again pay more attention this time)
+```
