Update 20. Final Mission - Medium Network.md

--- a/20. Final Mission - Medium Network.md
+++ b/20. Final Mission - Medium Network.md
@@ -55,5 +55,5 @@ Okay let's get into it, obvously there are a few fuck up in this network. Some a
     
 ```diff
 - (There are things missing from the network such as SIEM an IDS/IPS...)
-- (Therre is more to the network in terms of secure and not secure, one example is the DC should be in its own segment please sit and look at it again and make two colums for secure and not secure and fill them again pay more attention this time)
+- (There is more to the network in terms of secure and not secure, one example is the DC should be in its own segment please sit and look at it again and make two colums for secure and not secure and fill them again pay more attention this time)
 ```
