Edited, addressed notes.

--- a/01. The Seven Layer OSI Model.md
+++ b/01. The Seven Layer OSI Model.md
@@ -22,181 +22,111 @@ To better illustrate what I mean, I will take the classic example of sending a l
 
 ```diff
 - (Please in each layer and explain *shortly* about one of them (1-2 lines))
++ Done (^~^)
 ```
 
-
-
-#### **The First Layer, The Physical layer**
-
-The physical layer isn't really a layer, it is also not involved in the encapsulation process. The Physical layer just consists of standards to physical networking components, like:
-
-*   **Hubs**
-*   **Network cables**
-*   **Repeaters**
-*   **Wi-Fi**
-
-Simply put, the physical layer is just the components and wires that get the bits of information from point **A** to point **B** (Over a short geographic distance).
-
-
-
-
-#### **The Second Layer, The Data-Link Layer**
-
-The Data-Link layer solves the issues presented when sending information between physically connected computers. It serves the purpose of sending bits of information from one **NIC to another NIC**. A `NIC`: Network Interface Cards (Could also be a **Wi-Fi Access Card**), is a physical component in a machine that receives the information from the cable and into the machine.
-
-**Each NIC** has a `MAC Addresses`. A MAC Address is a standard, "one of a kind", string of 48 bits represented by 12 _Hexadecimal_ characters (exmpl: A0-B1-C2-D3-E4-F5) that are exclusive to each NIC. We can then use that MAC Address to send information to another machine on the same network.
-
-Another component in the 2nd layer is a `Switch`. A switch allows to connect multiple computers physically using network cables to create a *local* network called "**LAN**"* (Local Area Network). A switch can also be used to group computers in the LAN to *sub*-networks called a "**VLAN**"s* that are "pseudo-isolated" from the rest of the computers connected to the switch, sending packets from one VLAN to another is still possible tough.
-
-The 2nd layer also takes care of delivering a packet through routers using MAC Addresses, simply delivering to the next router **NIC MAC Address** until the target machine is reached.
-This way of packet delivery is called **Hop-to-Hop**.
-
-
-> LAN - A network of physically connected machines, limited by the need for cables and switches.
+#### <font size=4>Uno, Physical</font>
+> The first layer of the OSI model is the layer including the components used to simple transfer the data from one machine to another, that includes:
 > 
-> VLAN - A group of computers bound together in a switch port configuration under the same vlan tag that separates them from the rest of the computers/groups in the LAN.
-```
-             __             !__             !__             !__              __
-            [C1] ---------- [R0] ---------- [R1] ---------- [R2] ---------- [C2]
-            ====`o                                                          ====`o
-MAC ADDR    a0-d2-e0        f0-d1-f2        a2-2f-3f        5f-2c-4d        a0-d2-e1
-```
+> *   **Hubs**
+> *   **Network cables**
+> *   **Repeaters**
+> *   **Wi-Fi**
+
+<br>
+
+#### <font size=4>Dos, Data-Link</font>
+
+> The second layer of the OSI model is used to give an addressing scheme for computers that are connected physically to eachother, that is done using a networking component called a `switch` and the addressing scheme is called `MAC` which stands for "Media Access Control".
+
+Every computer connected to the network has a **NIC**, a Network Interface Card, which has a `MAC Addresses`. A MAC Address is a standard, "one of a kind", string of 12 Hexadecimal characters (exmple: A0-B1-C2-D3-E4-F5). We can use that MAC Address to send information to another machine on the same network.
+
+Another component in the 2nd layer is a `Switch`. A switch connects multiple computers physically using network cables to a hub which theh creates a *local* network called "**LAN**" (Local Area Network). [Oh my god! WOW](https://www.youtube.com/watch?v=H46FRRvb-9o). A switch can be used to create multiple smaller LANs called **VLAN**s (V - virtual) that are isolated from the rest of the LANs.
+
+The switch is responsible to forward the packet's to the approiate recipeints based on MAC addresses in the Layer 2 header. Layer 2 is also includes a Cyclic Redundency Check, which is an integrity check for the data.
 
 ```diff
 - (If a switch is used to connect a computer physically why is it a second layer component?)
++ Answered :)
 ```
+<br>
 
-#### **The Third Layer, The Networking Layer**
+#### <font size=4>Tres, Networking</font>
 
-The third layer serves the purpose of **End to End** packet delivery,  *layer 2 does not use MAC addresses like layer 2 does, it uses a different addressing scheme called `IP address`* *by using a different addressing scheme then the one that layer 2 uses called `IP address`*. An IP Address is made up of 32 bits represented as 4 octets, each 0-255, and that address is used to represent a computer in the wide web of machines connected to the internet. 
+> The third OSI layer's duty is enabling delivery of packet from one machine to another in the internet, unlike layer 2 which focuses on the LAN. It has it's own seperate addressing scheme and networking component.
 
-A component used that belongs to this layer is the `Router`, the router lets computers communicate outside of their networks in-directly, passing the packets though and routing them to their end goal one router at a time.
+The third layer serves the purpose of **End to End** packet delivery, by using a different addressing scheme then the one that layer 2 uses called `IP address`. An IP Address is made up of 32 bits represented as 4 octets, each 0-255 (example: 100.4.120.77). That address is used to find and deliver packets to machines in the internet. 
 
-```
-             __             !__             !__             !__              __
-            [C1] ---------- [R0] ---------- [R1] ---------- [R2] ---------- [C2]
-            ====`o                                                          ====`o
-MAC ADDR    a0-d2-e0        f0-d1-f2        a2-2f-3f        5f-2c-4d        a0-d2-e1
-IP  ADDR    192.130.200.1                                                   192.130.44.21
-```
+This layer's component is the `Router`, which acts as a transport node (but also a standalone component) in the internet. _Routing_ packets from one **endpoint** (not neighbor) to another using their IP addresses. A process called **End to End** delivery.
+
+
 **So why use both MAC and IP addressing?**
-The simple answer is that they serve the same purpose in different methods that rely on eachother. Like we know, the 2nd layer work on a *hop by hop* system and the 3rd layer works on an *end to end* system. The IP address signifies the address of the end computer while the MAC address can be used to route the packet.
 
-```
-STEPS TO MOVE YOUR PACKET! (FROM C1 TO C2)
---------------------------------------------------------------------------------------------
+They serve different purposes.<br>
+L3 IP addresses are used to address the two peers in the conversation and will stay static for the entirety of that session. L2 MAC addresses will change each time the packet arrives at a new NIC to get to the next NIC using their MAC address (hop by hop).
 
-    1.  Packet after leaving C1, on it's way to the first router (R0).
+They are used by differnt components.<br>
+A router will know which router to send the packet to next based on the ip address, a NIC will know which NIC to send to next based on the MAC address (which will be of the next router in the route).
 
-    +---------------------------------------+
-    |   DATA                                |
-    |   011001010110000101110011011101000   |
-    |   110010101110010                     |   
-    +---------------------------------------+
-    | SENDER IP ADDRESS     192.130.200.1   |
-    | TARGET IP ADDRESS     192.130.44.21   |
-    +---------------------------------------+
-    | SENDER MAC ADDRESS    a0-d2-e0...     |
-    | TARGET MAC ADDRESS    f0-d1-f2...     |
-    +---------------------------------------+
+They are used in different ways.<br>
+The same IP address will be used the entire route, a different MAC address will be used each new node.
 
-    2.  Packet reaches R0 successfully, the router strips the layer 2 header.
-        The router then attaches it's own layer 2 header to route the packet
-        to the next router.
 
-    +---------------------------------------+
-    |   DATA                                |
-    |   010001010110011101100111            |
-    +---------------------------------------+
-    | SENDER IP ADDRESS     192.130.200.1   |
-    | TARGET IP ADDRESS     192.130.44.21   |
-    +---------------------------------------+
-    | SENDER MAC ADDRESS    f0-d1-f2...     |
-    | TARGET MAC ADDRESS    a2-2f-3f...     |
-    +---------------------------------------+
-
-    And so it goes until the packet reaches IP address 192.130.44.21.
-
---------------------------------------------------------------------------------------------
-```
 
 ```diff
 - (Consider my rephrasine in **- make sure I understood the intention)
++ Your rephrase was used. <3
 - (MAC and IP does not serve the same purpose exactly, and please rephrase and simplify your explanation about the differences)
++ And the diffrences were simplified.
 ```
+<br>
 
-#### **The Fourth Layer, The transport Layer**
+#### <font size=4>Cuatro, Transport</font>
 
-The goal of the 4th layer, the transport layer, is to provide **Service to Service** communication. After tackling communication between different machines in and out of the LAN we need to then decide what service (application or computer service) recieves what information. After all, we wouldn't want our minecraft game to get our discord messages or youtube videos.
+> The 4th layer's job is providing transport protocols that enable: service to service delivery and reliable transmission. This is done using the TCP, UDP, QUIC and more protocols, these are the fundaumental protocol used to communicate between machines. Questions that this layer answers are "How to send data reliably?", "How to send data to a specific application?" and "How to maintain a session between two computers?".
 
-The way layer 4 sorts the incoming `data streams` is by using it's own addressing scheme called `transport protocols & ports`(similar to ports on a switch). And it works like that:
-* TCP (Transmission Control Protocol)
-    This protocol is used to transmit information over a stable connection between two endpoints (favors reliability). has 65535 ports.
-    
-    Features:
-    * TCP Handshake.
-    * Data-Loss recovery.
-    * Flow control.
+The goal of the 4th layer, the transport layer, is to provide **Service to Service** communication. Basically, what application or service gets what piece of data? we wouldn't want our minecraft game to be sent discord messages.
 
-    Flaws:
-    * Slower than UDP (Higher Round trip time).
-    * Expensive to initiate.
+The way layer 4 sorts the incoming `data streams` by application is by using another addressing scheme called `logical ports`(similar to physical ports). There are also differnt `transport protocols`, here are the two being mainly used:<br>
+
+**TCP** <font size=1>(Transmission Control Protocol)</font>
+> This protocol is used to transmit information over a stable connection between two endpoints (favors reliability). has 65535 ports.
+>     
+> [+] TCP Handshake.<br>
+> [+] Data-Loss recovery.<br>
+> [+] Flow control.<br>
+> 
+> [-] Slower than UDP (Higher Round trip time).<br>
+> [-] Expensive to initiate.<br>
 
 
-* UDP (User Datagram Protocol)
-    This protocol is used to send data without a pre-established connection very quickly and inexpensively (favors efficiency). has 65535 ports.
-    
-    Features:
-    * Very fast.
-    * Very simple.
-    * 0 RTT.
+**UDP** <font size=1>(User Datagram Protocol)</font>
+> This protocol is used to send data without a pre-established connection very quickly and inexpensively (favors efficiency). has 65535 ports.
+> 
+> [+] Very fast.<br>
+> [+] Very simple.<br>
+> [+] 0 RTT.<br>
+> 
+> [-] Not stable.<br>
+> [-] No data-loss recovery.<br>
+> [-] No Flow control.<br>
 
-    Flaws:
-    * Not stable.
-    * No data-loss recovery.
-    * No Flow control.
+<br><br>
 
-Using the layer 4 header, an application on the local machine can decide what protocol it wants to use to send data on the 4th layer and what port to bind itself to. Every application that wants to recieve information from a remote location has to bind itself to a vacated port, by doing that it can make sure that it will recieve only the information that is sent by *hopefully* the server/client side of the same application and isolate it's own data stream from the other existing data streams that the machine is handling. Like a Minecraft server session, a Youtube video and a Discord messaging application.
-
-To sum up the Packet structure up until now and how everything works we can equate it to a real life postal address.
-First, the structure:
-```
-+-------------------------------+
-|   DATA // The data being sent | 
-|-------------------------------|
-|   0100100001100101011011000   |
-|   110110001101111             |
-|                               |
-'-------------------------------'
-| LAYER 4 HEADER (TCP/UDP)      |
-|-------------------------------|
-|                               | 
-| SENDER PORT           ...     |
-| TARGET PORT           ...     |
-'-------------------------------'
-| LAYER 3 HEADER                |
-|-------------------------------|
-|                               | 
-| SENDER IP ADDRESS     ...     |
-| TARGET IP ADDRESS     ...     |
-'-------------------------------'
-| LAYER 2 HEADER                |
-|-------------------------------|
-|                               | 
-| SENDER MAC ADDRESS    ...     |
-| TARGET MAC ADDRESS    ...     |
-'-------------------------------'
-```
+An application that wants to communicate over the network can bind itself to a vacated port using one of the protocols that layer 4 has (TCP and UDP ports are differnt). Then any data that gets sent to that logical port will be interpreted by that program. Each time a computer get's a packet it will direct the data to the application responsible to the port indicated in the layer 4 header.
 
 ```diff
 - (In which way does the addressing scheme called `transport protocols & ports` is similar to ports on a switch?)
++ I am stoopid.
 - (In the diagram the data should be under layer 2 not above 4)
++ Got rid of the diagrams.
 ```
 
+<br>
 
-#### **The Fifth Layer, The Session Layer**
+#### <font size=4>Cinco, Session</font>
 
-*After addressing the network addressing problems and who is who and where we have layers 5, 6 and 7 which are can be freely intergrated by each application.*
+> The session layer is simply responsible for the connectivity of the session. It creates, terminates and manages network sessions.
 
 Layer 5 just manages the session of the two endpoints:
 * creating it at the beginning of communication 
@@ -207,15 +137,16 @@ Layer 5 just manages the session of the two endpoints:
 
 ```diff
 - (please rephrase the first sentence between the **. Couldn't understand the sentence)
++ Done :3
 ```
+<br>
 
-#### **The Sixth Layer, The Presentation Layer**
+#### <font size=4>Seis, Presentation</font>
 
 The 6th layer is crucial, it is responsible for preparing the data to be ready for processing by the application layer. It's responsible for encrypting the data using encryption protocols, character set translation and data compression. Machines may use different encoding so this layer is responsible for encoding/decoding the information, if the two machines want to encrypt their sessions then this layer is also responsible for that. From the actual message encryption to establishing encryption algorithms and keys. And lastly this layer is responsible for compressing the data to improve efficiency.
 
+<br>
 
-
-
-#### **The Seventh Layer, The Application Layer**
+#### <font size=4>Siete, Application</font>
 
 The application layer contains application specific protocols that involve user input or output, it is actually the only layer that interacts with the user. A protocol that can be found in this layer is HTTP or SMTP.
